# llm-foundry-ale

./: .gitignore  .modules.sh  CONTRIBUTING.md  README  README.md  installation.sh  pyproject.toml
alignment/: README.md  dpo_trainer.py  dpo_trainer.sh  grpo_trainer.py  grpo_trainer.sh  reward_trainer.py  reward_trainer.sh  sft_trainer.py  sft_trainer.sh  utils.py  vibes.py
data/: README.md  decontaminate.sh  preprocess.py  preprocess.sh  utils.py
ddp/: README  data_loading.py  mfu.py  model_setup.py  optimizers.py  specifications.py  test.py  tests_ddp.py  train_config.yml  train_ddp.py  train_ddp.sh  trainer.py  utils.py
distributed/: README  README.md  data_loading.py  mfu.py  model_setup.py  optimizers.py  specifications.py  specifications.yaml  train_ddp.py  train_ddp.sh  train_fsdp.py  train_fsdp.sh  trainer.py  utils.py
dpo/: alpaca_eval.sh  dpo_trainer.sh
evals/: README.md  eval_harness_bn.sh  eval_harness_hi.sh  eval_harness_pt_new.sh  eval_harness_pt_old.sh
fsdp/: README  data_loading.py  mfu.py  model_setup.py  optimizers.py  specifications.py  train_config.yml  train_fsdp.py  train_fsdp.sh  trainer.py  utils.py
gym/: README  README.md  generate_from_email_templates.py  generate_from_instruction_templates.py  generate_from_long_context_templates.py  generate_from_math_dataset.py  generate_from_tool_call_templates.py  long_context_templates.py  tasks_metadata.py  tests.py  utils.py  verifier.py  verifiers.py
hf_hub/: convert_to_hf.sh  download_repository.py  download_repository.sh  save_as.sh  upload_ckpts_to_hf.sh  upload_repository.sh
(+145 files in other folders)
