[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-foundry"
version = "0.1.0"
description = "Developing foundation models for low-resource languages"
requires-python = ">=3.12"

[project.optional-dependencies]
data = [
    "transformers",
    "datasets",
    "sentencepiece",
    "pandas",
    "numpy",
    "langdetect",
    "datatrove[io,processing]",
    "lxml[html_clean]",
    "stanza",
    "spacy",
    "pyyaml",
]
distributed = [
    "wheel==0.45.1",
    "packaging==25.0",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
    "numpy==2.3.2",
    "transformers==4.53.2",
    "datasets==4.0.0",
    "sentencepiece==0.2.0",
    "accelerate==1.9.0",
    "codecarbon==3.0.6",
    "wandb==0.21.0",
    "pyyaml==6.0.2",
    "liger-kernel==0.6.1",
    "flash_attn==2.8.2",
]
synth = [
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
    "transformers",
    "vllm",
]
trl = [
    "setuptools",
    "wheel",
    "trl",
    "vllm==0.11.2",
    "flash_attn==2.8.2",
    "codecarbon==3.0.6",
    "wandb==0.21.0",
    "liger-kernel==0.6.1",
]

[tool.setuptools]
packages = []
